# NGSA-NODE-PINN

./: .gitignore  README.md  pyproject.toml
docs/: Multi-objective_NODE_Harmonic_Oscillator_Example_from_Gemini.md  NSGA_NODE_tasks.md  NSGA_PINN_tasks.md  bibliography.md  how_to_migrate_to_adaptive_phase_order_approach.md  nsga_first_concept.md  search_for_NSGA2-NODE.md
examples/: NSGA-PINN_versus_PINN_Performance_Comparison.md  third_party_burgers_runner.py  torchga_example.ipynb  verify_hybrid_pinn.py  verify_node_oscillator.py
src/nsga_neuro_evolution_core/: interface.py  pareto_gif.py  selector.py  utils.py
src/nsga_node/: dynamics.py  evaluator.py  orchestrator.py  problem.py
src/nsga_pinn/: evaluator.py  orchestrator.py  problem.py  selector.py
tests/core/: test_interface.py  test_utils.py
tests/node/: test_dynamics.py  test_evaluator.py
tests/pinn/: test_evaluator.py  test_orchestrator.py  test_problem.py  test_selector.py
