[project]
name = "ngsa-node-pinn"
version = "0.1.0"
description = "Hybrid NSGA-PINN and NSGA-NODE experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pymoo",
    "torch",
    "torchode",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
viz = [
    "matplotlib",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
