[project]
name = "ngsa-node-pinn"
version = "0.1.0"
description = "Hybrid NSGA-PINN and NSGA-NODE experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pymoo>=0.6.1.6",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
viz = [
    "matplotlib",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
